[MD settings] disable clear browsing data while it is running

This CL will disable the buttons in the clear browsing data dialog
if clear browsing data is in progress.

Based largely on https://crrev.com/2118503005/ by
Dave Schuyler <dschuyler@chromium.org>

BUG=622998
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:closure_compilation;master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2133893002
Cr-Commit-Position: refs/heads/master@{#405518}

Former-commit-id: 3b09ab93aed1759180313cec0ce435646b93225e