chrome/browser/resources/settings/clear_browsing_data_dialog/clear_browsing_data_dialog.js
@@ -65,6 +65,9 @@ Polymer({
   /** @override */
   ready: function() {
     this.$.clearFrom.menuOptions = this.clearFromOptions_;
+    this.addWebUIListener('browsing-data-removing', function(isRemoving) {
+      this.clearingInProgress_ = isRemoving;
+    }.bind(this));
     this.addWebUIListener(
         'browsing-history-pref-changed',
         this.setAllowDeletingHistory_.bind(this));
@@ -74,10 +77,16 @@ Polymer({
     this.addWebUIListener(
         'update-counter-text',
         this.updateCounterText_.bind(this));
+  },
+
+  /** @override */
+  attached: function() {
     this.browserProxy_ =
         settings.ClearBrowsingDataBrowserProxyImpl.getInstance();
-    this.browserProxy_.initialize();
-    this.$.dialog.open();
+    this.browserProxy_.initialize().then(function(isRemoving) {
+      this.clearingInProgress_ = isRemoving;
+      this.$.dialog.open();
+    }.bind(this));
   },
 
   /**
@@ -131,14 +140,12 @@ Polymer({
    * @private
    */
   onClearBrowsingDataTap_: function() {
-    this.clearingInProgress_ = true;
     this.browserProxy_.clearBrowsingData().then(
       /**
        * @param {boolean} shouldShowNotice Whether we should show the notice
        *     about other forms of browsing history before closing the dialog.
        */
       function(shouldShowNotice) {
-        this.clearingInProgress_ = false;
         this.showHistoryDeletionDialog_ = shouldShowNotice;
 
         if (!shouldShowNotice)
